--- a/src/gui/UserPanel.form
+++ b/src/gui/UserPanel.form
@@ -16,17 +16,18 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" attributes="0">
+          <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jScrollPane1" min="-2" pref="489" max="-2" attributes="0"/>
+              <Component id="jScrollPane1" pref="545" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="1" attributes="0">
-                  <Component id="giveBookButton" alignment="0" max="32767" attributes="0"/>
-                  <Component id="infoLabel" alignment="0" max="32767" attributes="0"/>
-                  <Component id="errorLabel" alignment="1" max="32767" attributes="0"/>
-                  <Component id="modeToggleButton" alignment="0" pref="251" max="32767" attributes="0"/>
-                  <Component id="returnBookButton" max="32767" attributes="0"/>
-                  <Component id="userInputTF" alignment="0" max="32767" attributes="0"/>
+              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                  <Component id="infoLabel" alignment="1" max="32767" attributes="0"/>
+                  <Component id="returnBookButton" alignment="1" max="32767" attributes="0"/>
+                  <Component id="giveBookButton" alignment="1" max="32767" attributes="0"/>
+                  <Component id="modeToggleButton" alignment="1" pref="178" max="32767" attributes="0"/>
+                  <Component id="errorLabel" max="32767" attributes="0"/>
+                  <Component id="currentUserLabel" alignment="0" max="32767" attributes="0"/>
+                  <Component id="userInputTF" max="32767" attributes="0"/>
                   <Component id="selectUserButton" alignment="0" max="32767" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
@@ -36,26 +37,28 @@
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+              <EmptySpace min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
-                      <Component id="modeToggleButton" min="-2" max="-2" attributes="0"/>
+                      <Component id="modeToggleButton" min="-2" pref="38" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="giveBookButton" min="-2" max="-2" attributes="0"/>
+                      <Component id="giveBookButton" min="-2" pref="37" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="returnBookButton" min="-2" max="-2" attributes="0"/>
+                      <Component id="returnBookButton" min="-2" pref="36" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="userInputTF" min="-2" pref="23" max="-2" attributes="0"/>
+                      <Component id="userInputTF" min="-2" pref="37" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="selectUserButton" min="-2" pref="23" max="-2" attributes="0"/>
+                      <Component id="selectUserButton" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="currentUserLabel" min="-2" pref="28" max="-2" attributes="0"/>
                       <EmptySpace max="32767" attributes="0"/>
                       <Component id="infoLabel" min="-2" pref="64" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="errorLabel" min="-2" pref="59" max="-2" attributes="0"/>
                   </Group>
-                  <Component id="jScrollPane1" min="-2" pref="483" max="-2" attributes="0"/>
+                  <Component id="jScrollPane1" pref="483" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace pref="54" max="32767" attributes="0"/>
+              <EmptySpace min="-2" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -78,6 +81,7 @@
                 <Column editable="true" title="Title 4" type="java.lang.Object"/>
               </Table>
             </Property>
+            <Property name="fillsViewportHeight" type="boolean" value="true"/>
             <Property name="selectionModel" type="javax.swing.ListSelectionModel" editor="org.netbeans.modules.form.editors2.JTableSelectionModelEditor">
               <JTableSelectionModel selectionMode="0"/>
             </Property>
@@ -136,6 +140,16 @@
           <Color blue="eb" green="eb" red="eb" type="rgb"/>
         </Property>
         <Property name="opaque" type="boolean" value="true"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="currentUserLabel">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Consolas" size="14" style="0"/>
+        </Property>
+        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="99" green="66" red="0" type="rgb"/>
+        </Property>
       </Properties>
     </Component>
   </SubComponents>
